tdf#104532 handle constraints for NEGBINOM.DIST correctly.

Also changed variable names for easier understanding of their meaning.

Change-Id: Iab558d7d1d9533f2a0c42e3d5f4acecead2e818e
Reviewed-on: https://gerrit.libreoffice.org/31807
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit ccbb0dd8788bf481f398782bf1519cd57c3b2bfb)
Reviewed-on: https://gerrit.libreoffice.org/31908